cmake_minimum_required(VERSION 3.15)
project(RandomExercises CXX)
set(CMAKE_CXX_STANDARD 20)

add_subdirectory(rand_exercises/BlackJack)
add_subdirectory(rand_exercises/Fib)
add_subdirectory(rand_exercises/HashTable)
add_subdirectory(rand_exercises/LinkedList)
add_subdirectory(rand_exercises/QuickSort)
